fix change password field in profile module according app

--- a/src/appComponents/Footer/Footer.css
+++ b/src/appComponents/Footer/Footer.css
@@ -76,6 +76,7 @@
   font-size: 9px;
   letter-spacing: -0.19px;
   color: #ffffff;
+  cursor: pointer;
 }
 
 .companyImg {
@@ -134,6 +135,7 @@
 }
 
 @media (min-width: 1200px) {
+
   .footer .container,
   .container-lg,
   .container-md,
@@ -144,6 +146,7 @@
 }
 
 @media (min-width: 992px) {
+
   .footer .container,
   .container-lg,
   .container-md,
@@ -157,4 +160,8 @@
     display: flex;
     justify-content: flex-start;
   }
+}
+
+.linkNames a {
+  text-decoration: none;
 }
