--- a/src/appComponents/DealTypesModule/CompanyData.module.css
+++ b/src/appComponents/DealTypesModule/CompanyData.module.css
@@ -51,7 +51,7 @@
     line-height: 27px;
     color: #000000;
     display: -webkit-box;
-    -webkit-line-clamp: 1;
+    -webkit-line-clamp: 2;
     -webkit-box-orient: vertical;
     overflow: hidden;
 }
@@ -73,6 +73,7 @@
     font-size: 13px;
     line-height: 20px;
     color: #000000;
+    margin-bottom: 0px;
 }
 
 .productModule h4 {
@@ -89,11 +90,11 @@
 @media only screen and (max-width: 400px) {
     .productDiscription h3 {
         font-weight: 600;
-        font-size: 17px !important;
-        line-height: 27px;
+        font-size: 15px !important;
+        line-height: 19px;
         color: #000000;
         display: -webkit-box;
-        -webkit-line-clamp: 1;
+        -webkit-line-clamp: 2;
         -webkit-box-orient: vertical;
         overflow: hidden;
         margin-bottom: 2px;
@@ -112,6 +113,6 @@
     }
 
     .productImg img {
-        width: 130px;
+        width: 135px;
     }
 }
