--- a/src/appComponents/PostAdvert/PostAdvert.css
+++ b/src/appComponents/PostAdvert/PostAdvert.css
@@ -213,7 +213,7 @@
     color: #FFFFFF;
     border-radius: 10px;
     min-width: 311px;
-    height: 40px;
+    height: 46px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -235,6 +235,7 @@
     color: #FFFFFF;
     border-radius: 10px;
     background-color: #000000;
+    height: 46px !important;
 }
 
 .post_Add_DeleteAdever button {
@@ -682,4 +683,18 @@
 .dropdown_menu .dropdown-item.active,
 .dropdown-item:active {
     background-color: black !important;
+}
+
+@media only screen and (max-width: 400px) {
+    .selectOptionPost .css-a0izu-control {
+        font-size: 18px;
+    }
+    
+    .selectOptionPost .css-13cymwt-control {
+        font-size: 18px;
+    }
+    
+    .selectOptionPost .css-1xz3in2-control {
+        font-size: 18px;
+    }
 }
