--- a/src/appComponents/Profile/Profile.css
+++ b/src/appComponents/Profile/Profile.css
@@ -319,9 +319,23 @@
   border-bottom-left-radius: 7.26px !important;
 }
 
-.phoneInputSet .react-tel-input .selected-flag .flag {
+/* .phoneInputSet .react-tel-input .selected-flag .flag {
   display: none !important;
   z-index: 0;
+  
+} */
+
+.phoneInputSet .react-tel-input .selected-flag .flag {
+  display: block !important;
+  opacity: 0;
+  z-index: 99999999999999 !important;
+}
+.react-tel-input .selected-flag .flag {
+  opacity: 0;
+  width: 100% !important;
+  position: absolute;
+  height: 100% !important;
+  margin-top: -5px;
 }
 
 .phoneInputSet .react-tel-input .selected-flag:hover,
