worked on post advert module like added search bar in amount dropdwon

--- a/src/appComponents/PostAdvert/PostAdvert.css
+++ b/src/appComponents/PostAdvert/PostAdvert.css
@@ -697,4 +697,13 @@
     .selectOptionPost .css-1xz3in2-control {
         font-size: 18px;
     }
+
+    .post_Add_priceDiv .dropdown_menu .dropdown-menu.show input{
+        width: 250px !important;
+    }
+
+    .dropdown_menu .dropdown-menu.show {
+        width: 300px !important;
+    }
+
 }
