--- a/src/authComponents/EmailVarification/EmailVarify.css
+++ b/src/authComponents/EmailVarification/EmailVarify.css
@@ -102,3 +102,14 @@
     font-weight: 500;
   }
 }
+
+@media screen and (min-width: 320px) and (max-width: 359px) {
+  .inputStyle {
+    width: 38px !important;
+    height: 38px;
+    margin: 0 10px !important;
+    font-size: 2rem;
+    border-radius: 4px;
+    border: 1px solid rgba(0, 0, 0, 0.3);
+  }
+}
