--- a/src/appComponents/YourAdd/YourAdd.css
+++ b/src/appComponents/YourAdd/YourAdd.css
@@ -93,3 +93,9 @@
 .postAdvertBox {
     margin-top: 9px;
 }
+
+@media only screen and (max-width: 991px) {
+    .postAdvertBox {
+        margin-top: 0px;
+    }
+}
