--- a/src/appComponents/Bookmarks/Bookmarks.module.css
+++ b/src/appComponents/Bookmarks/Bookmarks.module.css
@@ -24,3 +24,10 @@
     font-weight: 600;
     cursor: pointer;
 }
+
+
+@media only screen and (max-width: 991px) {
+    .bookmarkHeading {
+        margin-top: 10px;
+    }
+}
