--- a/src/appComponents/Profile/Profile.css
+++ b/src/appComponents/Profile/Profile.css
@@ -482,3 +482,9 @@
     font-size: 16px;
   }
 }
+
+@media only screen and (max-width: 991px) {
+  .profileRightPart {
+    margin-top: 10px;
+  }
+}
