working on feedback points in header section

--- a/src/appComponents/ClassiFieds/ClassiFieds.css
+++ b/src/appComponents/ClassiFieds/ClassiFieds.css
@@ -589,3 +589,10 @@
   border-color: #ced4da !important;
   box-shadow: unset !important;
 }
+
+
+/* feedback issue */
+.classiFields_shareicons {
+  margin-bottom: 2px;
+  
+}
