--- a/src/appComponents/ClassiFieds/ClassiFieds.css
+++ b/src/appComponents/ClassiFieds/ClassiFieds.css
@@ -83,7 +83,7 @@
   display: flex;
   justify-content: flex-start;
   align-items: center;
-  margin-bottom: 14px !important;
+  margin-top: 14px !important;
   cursor: pointer;
 }
 
@@ -155,11 +155,16 @@
   margin-left: 7px;
 }
 
+.classiFieds_time {
+  display: flex;
+  align-items: center;
+}
+
 .classiFieds_time span img {
   height: 18.57px;
   margin-right: 6px;
   width: 18.57px;
-  vertical-align: middle;
+  vertical-align: sub;
 }
 
 .classiFieds_RupeesText p {
@@ -396,11 +401,12 @@
 .classiFieds_bookmarkicon svg {
   color: #000000;
   position: absolute;
-  right: 0px;
+  /* right: 0px; */
+  right: -5px;
   top: 0;
 }
 
-@media only screen and (max-width: 380px) {
+@media only screen and (max-width: 383px) {
   .classiFields_shareicons img {
     width: 32.12px;
     height: 32.12px;
@@ -471,7 +477,8 @@
   .classiFieds_bookmarkicon svg {
     color: #000000;
     position: absolute;
-    right: -9px;
+    /* right: -9px; */
+    right: 0;
     top: 0;
     width: 22px;
   }
@@ -508,8 +515,9 @@
   .classiFieds_bookmarkicon svg {
     color: #000000;
     position: absolute;
-    right: -9px;
-    top: 0;
+    /* right: -9px; */
+    right: 0;
+    top: -1px;
     width: 22px;
   }
 
@@ -533,10 +541,11 @@
   .classiFieds_time span img {
     height: 14.57px;
     width: 14.57px;
+    margin-right: 3px
   }
 
   .classiFieds_time span {
-    font-size: 10.78876px;
+    font-size: 9.78876px;
     line-height: 12px;
   }
 }
@@ -590,9 +599,14 @@
   box-shadow: unset !important;
 }
 
+@media screen and (min-width: 320px) and (max-width: 330px) {
+  @-moz-document url-prefix() {
+    .classiFieds_countryName span {
+      font-size: 11px;
+    }
 
-/* feedback issue */
-.classiFields_shareicons {
-  margin-bottom: 2px;
-  
+    .classiFieds_countryName img {
+      margin-right: 7px;
+    }
+  }
 }
