--- a/src/appComponents/Header/Header.css
+++ b/src/appComponents/Header/Header.css
@@ -99,6 +99,7 @@
 .bannerImg {
   text-align: center;
   margin-bottom: 10px;
+  width: 1100px;
 }
 
 .bannerImg iframe {
@@ -141,67 +142,88 @@
   .header .container {
     max-width: 1100px;
   }
+
   .header .headerSection {
     width: 1100px;
   }
+
   .screenOverride {
     max-width: 1100px;
   }
+
   .screenOverride .row {
     justify-content: space-between;
   }
+
   .screenOverride .col-lg-6 {
     width: 530px;
   }
+
   .screenOverride .col-lg-5 {
     width: 530px;
   }
+
   .screenOverride .noteBoxClass {
     width: 530px;
   }
+
   .screenOverride .stickyClass {
     width: 530px;
   }
+
   .screenOverride .tab-content {
     width: 530px;
   }
+
   .screenOverride .Bookmarks_bookmarkHeading__FsPeU {
     width: 530px;
   }
+
   .screenOverride .classiFieds_forSaleBox {
     width: 530px;
   }
+
   .screenOverride .categoryButton {
     width: 530px;
   }
+
   .screenOverride .advertisment {
     width: 530px;
   }
+
   .screenOverride .profileRightPart {
     width: 530px;
   }
+
   .screenOverride .latestDeals {
     width: 530px;
   }
+
   .screenOverride .companyDetails {
     width: 530px;
   }
+
   .screenOverride .displayNoText {
     width: 530px;
   }
+
   .screenOverride .postAdvertBox {
     width: 530px;
   }
+
   .screenOverride .advertBox {
     width: 530px;
   }
+
   .screenOverride .post_Add_CategoryButton {
     width: 530px;
   }
+
   .navItem .navbar-nav .nav-link {
     padding-right: 25px !important;
     padding-left: 25px !important;
   }
+
   .navHeader .navbar-nav a.nav {
     padding: 10px 14px;
     margin-right: 7px;
@@ -212,6 +234,7 @@
   .header .container {
     max-width: 1024px;
   }
+
   .screenOverride {
     max-width: 1024px;
   }
